Fix buttons on mobile

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -70,3 +70,10 @@
 		max-height: 720px;
   }
 }
+
+.install-buttons {
+  margin: 8px 0;
+  a {
+    display: inline-block;
+  }
+}
